--- a/index.Rmd
+++ b/index.Rmd
@@ -66,10 +66,10 @@ Note: this schedule is approximate and is likely to be modified as the course pr
 | October 12    | Lab: Multilevel Models for CS3  | CS4 Election Predictions |
 | October 17    | Lab: Who Votes in NC? |  |
 | October 19    | CS4: Election Modeling Workshop | CS3 Final Report: Infant Mortality Trends and CS4 Election Predictions Update|
-| October 24    | CS4: Group Presentations: Who Votes in NC? | CS4 Interim Report: Who Votes in NC? |
-| October 26    | Individual CS: Web Scraping | CS4 Election Predictions Update| 
+| October 24    | CS4: Remodeling After Disaster Strikes! |  |
+| October 26    | CS4: Group Presentations: Who Votes in NC?  | CS4 Interim Report: Who Votes in NC? and CS4 Election Predictions Update| 
 | October 31    | Individual CS: Web Scraping |  CS4 Interim Report: Election Prediction Models |
-| November 2    | Individual CS: Web Scraping Work in Groups | CS4 Election Predictions Update; CS4 Final Report Due by Midnight Nov 5|
+| November 2    | Individual CS: Web Scraping  | CS4 Election Predictions Update; CS4 Final Report Due by Midnight Nov 5|
 | November 7    | CS4: Presentations: Post Election Diagnostics | Individual CS Interim Report: Introduction and Analysis Plan  |
 | November 9    | CS5: Missing Data: How to Survive | |
 | Movember 14   | CS5: Missing Data | |
