--- a/cs04.Rmd
+++ b/cs04.Rmd
@@ -38,7 +38,7 @@ We will present predictions weekly, and the final case study grading criteria wi
 - Weekly predictions of the NC Congressional races and whether the House of Representatives will flip to Democratic control starting October 12
 - Interim report 1: who votes in NC? Using the NC voter files, identify who votes in NC so that these data can be used with election surveys in order to predict outcomes of NC congressional elections. Present results in short in-class presentation and in accompanying report not to exceed 5 pages.  Results should be fully reproducible. 
 - Interim report 2: in 5 pages (maximum), outline your models and general strategy for predicting the outcome of the 2018 elections.
-- Final report: provide point and interval estimates of the % of votes won by each NC Congressional candidate, predicting the winner of each race. Provide point and interval estimates of the probability that the US House of Representatives remains under Republican control after the 2018 election.
+- Final report: provide point and interval estimates of the % of votes won by each NC Congressional candidate, predicting the winner of each race. Provide point and interval estimates of the probability that the US House of Representatives remains under Republican control after the 2018 election. Include a description of your modeling and prediction strategy if any changes were made after the 10/31 report.
 - Presentation after election: discuss what went right and wrong with your modeling and assumptions based on election outcomes (e.g., winners, who voted, etc.)
 
 
