--- a/index.Rmd
+++ b/index.Rmd
@@ -76,7 +76,7 @@ Note: this schedule is approximate and is likely to be modified as the course pr
 | November 16   | Hands on: Missing Data and Survival | CS5 Interim Report: Patterns of Missing Data |
 | November 28   | Lab: CS5 and Individual CS Help | Individual CS Draft Report | 
 | November 30   | Lab: Individual CS Practice Presentations to Groups | CS5: Final Report |
-| December 5    | Individual Presentations | Individual Reports Due |
-| December 7    | Individual Presentations | Individual Reports Due |
-| December 13, 2-5pm   | Individual Presentations | Individual Reports Due |
+| December 5    | Individual Presentations | Individual Reports Due (Draft) |
+| December 7    | Individual Presentations | Individual Reports Due (Draft) |
+| December 13, 2-5pm   | Individual Presentations | Individual Reports Due (Final with any changes from draft highlighted) |
 
