fishy II due date added

--- a/fishy.Rmd
+++ b/fishy.Rmd
@@ -41,6 +41,8 @@ The data are available on Sakai under Resources in the "Something's Fishy" folde
 
 The report itself should be structured with an introduction, description of methods, results, and discussion. All code should be fully reproducible. Use of informative graphics is strongly encouraged; graphics should be easily accessible without having to point separately to data, and any graphics or snapshots of them should be included in the final report as well.
 
+Reports will be due no later than Friday, December 7, at the beginning of class.
+
 
 
 # Resources
