--- a/fishy.Rmd
+++ b/fishy.Rmd
@@ -16,7 +16,7 @@ On to fish modeling!
 
 - gain experience modeling data independently of any team members
 
-- note this is an INDIVIDUAL case study, and any discussion of the project with others while you are working on it will be considered a violation of the honor code. Absolutely no consultation with others is permitted.
+- note this is an INDIVIDUAL case study, and any discussion of the project with others while you are working on it will be considered a violation of the Duke Community Standard. Absolutely no consultation with others is permitted.
 
 # Case Study Goals
 
